# amd_hypervisor

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
driver/: .gitignore  Cargo.toml  build.bat  build.rs  load.cmd  rust-toolchain.toml  sign.cmd
driver/.cargo/: config
driver/doc/: detections.md
driver/src/: debug.rs  hook.rs  hook_testing.rs  ioctl.rs  lang.rs  lib.rs  support.rs  vm_test.rs
driver/src/handlers/: bp.rs  cpuid.rs  mod.rs  msr.rs  npf.rs  rdtsc.rs
driver/src/hook/: handlers.rs  mod.rs  npt.rs  physmem_descriptor.rs  testing.rs
driver/src/nt/: addresses.rs  include.rs  inline_hook.rs  irql.rs  memory.rs  mod.rs  physmem_descriptor.rs  processor.rs  ptr.rs  stack.rs
driver/src/svm/: events.rs  mod.rs  msr.rs  paging.rs  vmexit.rs  vmlaunch.asm  vmlaunch.rs
driver/src/svm/data/: guest.rs  mod.rs  msr_bitmap.rs  nested_page_table.rs  processor.rs  processor_data.rs  segmentation.rs  shared_data.rs
driver/src/svm/vmcb/: control_area.rs  mod.rs  save_area.rs
driver/src/svm/vmexit/: cpuid.rs  mod.rs  msr.rs  page_fault.rs  rdtsc.rs
driver/src/utils/: addresses.rs  alloc.rs  inline_hook.rs  logger.rs  memory.rs  mod.rs  processor.rs  stack.rs
driver/src/utils/nt/: mod.rs
hv-control/: Cargo.toml
hv-control/examples/: asm.rs  cpuid.rs  npt.rs  query_system_information.rs  struct.rs  vmlaunch.asm
hv-control/src/: ctl_code.rs  main.rs
hv-test/: Cargo.toml
hv-test/src/: lib.rs
hypervisor/: Cargo.toml
hypervisor/src/: debug.rs  hook.rs  lib.rs  support.rs
hypervisor/src/hook/: handlers.rs  mod.rs  npt.rs  testing.rs
hypervisor/src/svm/: events.rs  mod.rs  msr.rs  msr_bitmap.rs  nested_page_table.rs  paging.rs  shared_data.rs  support.rs  vcpu.rs  vcpu_data.rs  vmlaunch.asm
hypervisor/src/svm/data/: mod.rs  msr_bitmap.rs  nested_page_table.rs  processor_data.rs  shared_data.rs  vcpu_data.rs
hypervisor/src/svm/utils/: guest.rs  mod.rs  msr.rs  paging.rs  segmentation.rs
hypervisor/src/svm/vmcb/: control_area.rs  mod.rs  save_area.rs
hypervisor/src/svm/vmexit/: cpuid.rs  mod.rs  msr.rs  npt.rs  page_fault.rs  rdtsc.rs  vmrun.rs
hypervisor/src/utils/: alloc.rs  debug.rs  function_hook.rs  mod.rs  physmem_descriptor.rs  processor.rs  stack.rs
hypervisor/src/utils/nt/: irql.rs  mod.rs
