[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hypervisor = { path = "../hypervisor" }
winapi = { git = "https://github.com/Trantect/winapi-rs.git", branch = "feature/km", default-features = false, features = ["wdm", "ntstatus"] }

log = "0.4.14"
x86 = "0.44.0"
x86_64 = "0.14.7"

[build-dependencies]
winreg = "0.10.1"
failure = "0.1.8"

[profile.release]
lto = "fat"
debug = true
panic = "abort"
overflow-checks = false
debug-assertions = false
