[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { git = "https://github.com/Trantect/winapi-rs.git", branch = "feature/km", default-features = false, features = ["wdm", "ntstatus"] }

kernel-build = "0.1.0"
kernel-log = "0.1.1"
kernel-alloc = { version = "0.1.2", features = ["pool-tag"] }

log = "0.4.14"
x86 = "0.45.0"
x86_64 = "0.14.7"

hypervisor = { path = "../hypervisor", features = ["secondary-npt"] }

[profile.release]
lto = "fat"
debug = true
panic = "abort"
overflow-checks = false
debug-assertions = false
