[package]
name = "hv-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntapi       = { version = "0.3.4" }
winapi      = { version = "0.3.9", features = ["ioapiset", "memoryapi", "processthreadsapi"] }
widestring  = "0.5.1"
thiserror  = "1.0.30"

x86 = { git = "https://github.com/dancrossnyc/rust-x86", branch = "asm" }
#x86_64 = "0.14.7"

[dev-dependencies]
bitfield = "0.13.2"
winapi = "0.3.9"